# Control-and-regulation-of-robotic-systems

./: README.md
Meetings/Instructor meetings/: Meeting with leon 25 feb.docx
Meetings/Morning meetings/: Morning Meeting 26 feb.docx  Morning Meeting 5 marts.docx  Morning Meeting 5 marts_don.docx  Morning_Meeting_12_marts.docx  morning_meeting_02_04.docx  morning_meeting_19-03.docx  morning_meeting_26-03.docx  morning_meeting_nr7_09_04.docx
Vision/Cpp - Project/: CMakeLists.txt  SS_detect.cpp  SS_detect.h  data.txt  functions.cpp  functions.h  line_detection.cpp  line_detection.h  main.cpp  morph_funcs.cpp  morph_funcs.h  test_code.txt
Vision/ForSimulation/: CMakeLists.txt  functions.cpp  imagehandler.cpp  imagehandler.h  linedetecter.cpp  linedetecter.h  main.cpp  morph_funcs.cpp
Vision/Semester_Project/: main.py
simu/: CMakeLists.txt  Constants.h  ball.cpp  ball.h  ballDetector.cpp  ballDetector.h  imagehandler.cpp  imagehandler.h  linedetecter.cpp  linedetecter.h  main.cpp  maze.cpp  maze.h  motor.cpp  motor.h  point3d.h  uartcom.cpp  uartcom.h  updater.cpp  updater.h  wall.cpp  wall.h
simu - New algo/: CMakeLists.txt  Constants.h  ball.h  ballDetector.h  imagehandler.h  linedetecter.cpp  main.cpp  maze.h  motor.cpp  motor.h  point3d.cpp  uartcom.cpp  updater.cpp
